--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -8,11 +8,11 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('/mamaroneck-2023/press start.ttf') format('truetype');
+            src: url('/fonts/press start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
+            src: url('/fonts/pixelon.ttf') format('truetype');
         }
 
         body {
@@ -106,7 +106,7 @@
 <body>
     <div class="heading-text">
         <h1>ART FROM MAMARONECK, NY ~ 2023</h1>
-        <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
+        <p>by <a href="https://kovid-pal-odouard.github.io">Kovid Pal Odouard</a>!</p>
     </div>
     <img class="main-image" src="/mamaroneck-2023/thoughtful_foreigner.jpg" alt="image loading: portrait of a thoughtful foreigner">
     <div class="detail-images" style="--n: 2;">
@@ -115,7 +115,7 @@
     </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>portrait of a thoughtful foreigner</h2>
-        <body>late july, 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" class="link-element" target="_blank">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" class="link-element" target="_blank">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
+        <body>late july, 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" target="_blank">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" target="_blank">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/self_portrait.jpg" alt="image loading: untitled self portrait">
@@ -186,10 +186,10 @@
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/7aiKASJwWJAFSDEFQs4Asa?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <div class="caption" style="margin-bottom: 40px;">
         <h2>on the urban banyans of kolkata</h2>
-        <body>written in april, recorded in may 2023: an audio piece i did for evan madin's mamaroneck public radio. <a href="https://soundcloud.com/evan-madin/season-7-episode-3-spaced-out" class="link-element" target="_blank">soundcloud link here!</a> it's also on the apple podcasts app but to hell with that.</body>
+        <body>written in april, recorded in may 2023: an audio piece i did for evan madin's mamaroneck public radio. <a href="https://soundcloud.com/evan-madin/season-7-episode-3-spaced-out" target="_blank">soundcloud link here!</a> it's also on the apple podcasts app but to hell with that.</body>
     </div>
     <div class="caption" style="margin-bottom: 25px;">
-        <body>p.s. shoutout to <a href="https://jillshoffiett.com/home.html" class="link-element" target="_blank">jill shoffiett</a>, who was my art teacher at mamaroneck high school and while i made all of this. her framing of art-making in terms of composition and markmaking (formal aspects > nebulous ideas) made me relate to the act of creation on a level i never had before. also to shoutout to polina!</body>
+        <body>p.s. shoutout to <a href="https://jillshoffiett.com/home.html" target="_blank">jill shoffiett</a>, who was my art teacher at mamaroneck high school and while i made all of this. her framing of art-making in terms of composition and markmaking (formal aspects > nebulous ideas) made me relate to the act of creation on a level i never had before. also to shoutout to polina!</body>
     </div>
 </body>
 </html>
