--- a/thevillage-2024/sidgwick_singer/index.html
+++ b/thevillage-2024/sidgwick_singer/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kovid pal odouard: writing</title>
     <style>
-        @font-face {
-            font-family: 'Press Start 2P';
-            src: url('/mamaroneck-2023/press start.ttf') format('truetype');
-        }
-        @font-face {
-            font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
-        }
-        @font-face {
-            font-family: 'Garamond';
-            src: url('garamond.ttf') format('truetype');
+      @font-face {
+          font-family: 'Press Start 2P';
+          src: url('/fonts/press start.ttf') format('truetype');
+      }
+      @font-face {
+          font-family: 'Pixelon';
+          src: url('/fonts/pixelon.ttf') format('truetype');
+      }
+      @font-face {
+          font-family: 'Garamond';
+          src: url('/fonts/garamond.ttf') format('truetype');
         }
         body {
             display: flex;
