--- a/thevillage-2024/making_sense/index.html
+++ b/thevillage-2024/making_sense/index.html
@@ -8,15 +8,15 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('/mamaroneck-2023/press start.ttf') format('truetype');
+            src: url('/fonts/press start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
+            src: url('/fonts/pixelon.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Garamond';
-            src: url('garamond.ttf') format('truetype');
+            src: url('/fonts/garamond.ttf') format('truetype');
         }
         body {
             display: flex;
