--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -8,15 +8,15 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('/mamaroneck-2023/press start.ttf') format('truetype');
+            src: url('/fonts/press start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
+            src: url('/fonts/pixelon.ttf') format('truetype');
         }
         @font-face {
-            font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/Alkatra-Regular.ttf') format('truetype');
+            font-family: 'Bangla';
+            src: url('/fonts/Alkatra-Regular.ttf') format('truetype');
         }
 
         body {
@@ -106,21 +106,15 @@
             text-shadow: 1.5px 1.5px #CA9849;
             text-decoration: underline;
         }
-
-        .video-embed {
-            margin-top: 15px;
-        }
-
-        .video-embed iframe {
-            width: 720px;
-            height: 405px;
+        .Bangla {
+            font-family: 'Bangla', serif;
         }
     </style>
 </head>
 <body>
     <div class="heading-text">
         <h1>IT BEGINS! FROM FISH TO POSTCOLONIALITY</h1>
-        <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
+        <p>by <a href="https://kovid-pal-odouard.github.io">Kovid Pal Odouard</a>!</p>
     </div>
 
     <div class="caption" style="margin-bottom: 15px;">
@@ -129,10 +123,10 @@
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>from fish to postcoloniality: archive 1</h2>
-        <p>yay! using the free storage that is youtube as an archive for my thinking on this project! <a href="https://www.youtube.com/watch?v=E17Wp6EmXGY" class="link-element">LINK</a></p>
+        <p>yay! using the free storage that is youtube as an archive for my thinking on this project! <a href="https://www.youtube.com/watch?v=E17Wp6EmXGY">LINK</a></p>
     </div>
 
-    <div class="video-embed">
+    <div style="margin-bottom: 15px">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/E17Wp6EmXGY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
@@ -189,10 +183,10 @@
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>from fish to postcoloniality: archive 2. FISH UPDATE. there is no fish curriculum</h2>
-        <p>reflections right before i leave weeksville / start the semester!! <a href="https://www.youtube.com/watch?v=7ekbLMBYjog" class="link-element">LINK</a></p>
+        <p>reflections right before i leave weeksville / start the semester!! <a href="https://www.youtube.com/watch?v=7ekbLMBYjog">LINK</a></p>
     </div>
 
-    <div class="video-embed">
+    <div style="margin-bottom: 15px">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/7ekbLMBYjog?si=JmgXz_JrwOJOaQP2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
@@ -204,6 +198,7 @@
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
         <img src="/weeksville-2024/still_at_last.png" alt="image loading: SHARK">
     </div>
+
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>some doodles!</h2>
@@ -217,20 +212,22 @@
         <img src="doodle1_detail2.png" alt="image loading: DOODLE">
     </div>
 
+
     <div class="caption" style="margin-bottom: 5px;">
-        <h2>doodles from <span class="/Alkatra-SemiBold.ttf">শান্তিনিকেতন</span></h2>
-        <p>december 2024: <span class="/Alkatra-Regular.ttf">আমি যখন শান্তিনিকেতনে থাকতাম তখন প্রতিদিন আঁকতাম.</span> some doodles, in collaboration with various friends i met at the theater house. i obviously totally deviated from my intention to work with fish-forms, and just did scratched my itch to draw some improvised humans. i'm enjoying watercolor as a medium these days.. since discovering ink, i've always enjoyed laying down texture with liquid, but watercolor is such a delicate but vibrant version of that.</p>
+        <h2>doodles from <span class="Bangla">শান্তিনিকেতন</span></h2>
+        <p>december 2024: <span class="Bangla">আমি যখন শান্তিনিকেতনে থাকতাম তখন প্রতিদিন আঁকতাম.</span> some doodles, in collaboration with various friends i met at the theater house. i obviously totally deviated from my intention to work with fish-forms, and just did scratched my itch to draw some improvised humans. i'm enjoying watercolor as a medium these days.. since discovering ink, i've always enjoyed laying down texture with liquid, but watercolor is such a delicate but vibrant version of that.</p>
         <p>i deleted one of the sets of doodles because i stopped liking the look of it :p but there's still this:</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
       <img src="shantiniketan_2.jpg" alt="image loading: DOODLE">
     </div>
 
+
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a first life?!</h2>
         <p>late february to midmarch 2025: three sheets of paper that i filled up (a?) life meant to play with / reject any conception of organism or health. i started out with an intuitive schematic sketch of a head based on my practice so far, then spent little corners of time here and there laying down texture in watercolor, dip pen, micron, and some paint marker accents. this is probably one of my favorite things i've done.</p>
     </div>
-    <div class="video-embed">
+    <div style="margin-bottom: 10px">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/YUMkgKA4gZ4?autoplay=1&loop=1&playlist=YUMkgKA4gZ4&mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
@@ -238,28 +235,31 @@
       <img src="a_first_life3.png" alt="image loading: LIFE">
     </div>
 
+
     <div class="caption" style="margin-bottom: 5px;">
         <h2>archive 3</h2>
-        <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://youtu.be/xNhOYPgvyiI?si=w9zK7o3-8yYC5sgv" class="link-element">LINK</a></p>
+        <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://youtu.be/xNhOYPgvyiI?si=w9zK7o3-8yYC5sgv">LINK</a></p>
     </div>
 
-    <div class="video-embed" style="margin-bottom: 15px;">
+    <div style="margin-bottom: 15px;">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/xNhOYPgvyiI?si=O2ywpOLHs2SJ_u0L" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>archive 3 & 1/2</h2>
-        <p>a little addition to what i said last night <a href="https://www.youtube.com/watch?v=OD_MIL46UCw" class="link-element">LINK</a></p>
+        <p>a little addition to what i said last night <a href="https://www.youtube.com/watch?v=OD_MIL46UCw">LINK</a></p>
     </div>
-    <div class="video-embed" style="margin-bottom: 15px;">
+    <div style="margin-bottom: 15px;">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/OD_MIL46UCw?si=t6-PYPOPEHvM4tdD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+
+
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a second life. the flying keejay</h2>
         <p>march 25 to april 13, 2025: this is very dear to me. there was something so magical about committing to (mainly) to one sort of texture and slowly, iteratively, bringing a life into being with that... only to all of a sudden tear it apart with that pink, flowing, arcane force that bursts from it. i like that this creature is made of two different sorts of substances, two logics, even, which seem at odds with each other. something about the feel of those coming together to form a whole is so magical to me; i think i want to commit to that sort of feeling elsewhere in my work. i picture the drawing as being life-sized, i think, even though people always feel like it's a rendering of something much bigger.</p>
     </div>
-    <div class="video-embed">
+    <div style="margin-bottom: 10px">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/caLkuL8kqC0?autoplay=1&loop=1&playlist=caLkuL8kqC0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
     </div>
     <div class="detail-images" style="--n: 3; margin-bottom: 20px;">
@@ -274,6 +274,7 @@
       <img src="a_second_life6.png" alt="image loading: LIFE">
     </div>
 
+
     <div class="caption" style="margin-bottom: 5px;">
         <h2>movement!</h2>
         <p>late april 2025: i did a little character design with the intention of putting the dude in my little film, but looking at him, he just appeared so static -- it was hard to imagining him moving, dancing, living. so, i decided to give rendering human life *in motion* some practice. here are some sketches to that end. </p>
@@ -282,11 +283,13 @@
       <img src="movement.png" alt="image loading: MOVEMENT">
     </div>
 
+
+
     <div class="caption" style="margin bottom: 5px;">
       <h2>human life, in reverence</h2>
       <p>may 15-july 9, 2025: my first crack at hand-drawn animation! it is jank but i love it. the first moving kovidian life is a man in prayer.</p>
     </div>
-    <div class="video-embed">
+    <div style="margin-bottom:10px">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/kRQmnVDZioM?si=X_m7UwpBDGC8obbs" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="detail-images" style="--n: 1 margin-bottom: 20px;">
@@ -295,7 +298,7 @@
     <div class="detail-images" style="--n: 1 margin-bottom: 20px;">
       <img src="reverence_mechanics.png" alt="image loading: REVERENCE">
     </div>
-    <div class="video-embed">
+    <div style="margin-bottom:10px">
       <iframe width="720" height="405" src="https://www.youtube.com/embed/aPCG5Gl7iJ4?autoplay=1&loop=1&playlist=aPCG5Gl7iJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
@@ -305,11 +308,13 @@
       <img src="reverence_strips_progress_2.png" alt="image loading: REVERENCE">
     </div>
 
+
+
     <div class="caption" style="margin-bottom: 15px;">
         <h2>archive 4</h2>
-        <p>talking about where i'm at with my creative practice after a long hiatus. i've been doing worldbuilding stuff in two settings. here i talk about my inspiration for the first. for that project i'm developing myths from two cultures, one descended from the other. <a href="https://www.youtube.com/watch?v=xY9ZsXCFK48" class="link-element">LINK</a></p>
+        <p>talking about where i'm at with my creative practice after a long hiatus. i've been doing worldbuilding stuff in two settings. here i talk about my inspiration for the first. for that project i'm developing myths from two cultures, one descended from the other. <a href="https://www.youtube.com/watch?v=xY9ZsXCFK48">LINK</a></p>
     </div>
-    <div class="video-embed" style="margin-bottom: 100px">
+    <style="margin-bottom: 100px">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/xY9ZsXCFK48?si=_GNqwrjzOlt8Z9vN frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
     </div>
 </body>
