--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('press start.ttf') format('truetype');
+            src: url('fonts/press start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('pixelon.ttf') format('truetype');
+            src: url('fonts/pixelon.ttf') format('truetype');
         }
         body {
             display: flex;
